--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&display=swap');
-
+:root{
+    --purple:purple;
+    --black:#000;
+    --white:#fff;
+}
 body{
     font-family: 'Montserrat', sans-serif;
     background:#e3dbf6;
@@ -24,7 +28,7 @@ body{
     width: 100%;
     height: 100%;
     border-radius: 20px;
-    background-color: #fff;
+    background-color: var(--white);
     background-size: cover;
     position: absolute;
     backface-visibility: hidden;
@@ -36,13 +40,13 @@ body{
 .info{
     position: absolute;
     top: 0;
-    background-color: purple;
+    background-color: var(--purple);
     width: 100%;
     height: 50%;
     display: flex;
     flex-direction: column;
     justify-content:center;
-    color: white;
+    color: var(--white);
     align-items: center;
     border-top-left-radius: 20px;
     border-top-right-radius: 20px;
@@ -64,9 +68,19 @@ input{
 }
 .password-span{
     display: flex;
-    flex-direction: column;
+    align-items: center;
 }
-
+.icon{
+    cursor: pointer;
+}
+.underline{
+    height: 2px;
+    width: 100%;
+    margin-bottom: 30px;
+    background-color: var(--black);
+    position: absolute;
+    top: 20px;
+}
 .show{
     width: 20px;
     position: absolute;
@@ -84,18 +98,19 @@ span{
     height: 2px;
     width: 100%;
     margin-bottom: 30px;
-    background-color: #000;
+    background-color: var(--black);
 }
 .btn{
     display: flex;
 }
 .login-btn{
-    background-color: purple;
+    background-color: var(--purple);
     border: none;
     border-radius: 10px;
     padding: 5px 25px;
     margin-top: 30px;
-    color: #fff;
+    color: var(--white);
+    cursor: pointer;
 }
 .btn button:nth-child(1){
     margin-right: 50px;
@@ -104,7 +119,7 @@ span{
     width: 100%;
     height: 100%;
     border-radius: 20px;
-    background-color: #fff;
+    background-color: var(--white);
     background-size: cover;
     position: absolute;
     display: flex;
@@ -117,13 +132,13 @@ span{
 .info-register{
     position: absolute;
     top: 0;
-    background-color: purple;
+    background-color: var(--purple);
     width: 100%;
     height: 40%;
     display: flex;
     flex-direction: column;
     justify-content:center;
-    color: white;
+    color: var(--white);
     align-items: center;
     border-top-left-radius: 20px;
     border-top-right-radius: 20px;
@@ -135,7 +150,7 @@ span{
     align-items: center;
 }
 .reg{
-    background-color: purple;
+    background-color: var(--purple);
     width: 100%;
     position: absolute;
     bottom: 0;
@@ -146,72 +161,17 @@ span{
     justify-content: center;
 }
 .reg-btn{
-
-    background-color: purple;
+    cursor: pointer;
+    background-color: var(--purple);
     border: none;
     border-radius: 30px;
     padding: 5px 20px;
     margin: 15px 0;
-    color: #fff;
-    border: 2px solid white;
+    color: var(--white);
+    border: 2px solid var(--white);
 }
 .waving-hand{
     width: 100px;
 
 }
-/* .content{
-    color: #fff;
-    display: flex;
-    flex-direction: column;
-    position: absolute;
-    top: 320px;
-    left: 50px;
-} */
-/* .content button{
-    margin:30px 0;
-    background: transparent;
-    border: none;
-    outline: auto;
-    border-radius: 20px;
-    color: #000;
-    width: 100px;
-    padding:5px 30px;
-} */
 
-/* .about{
-    margin-left: 60px;
-} 
-.fname{
-    font-weight: 600;
-    font-size: 50px;
-}
-.lname{
-    font-weight: 450;
-    font-size: 50px;
-}
-.popularity{
-    display: flex;
-    margin-left: 60px;
-    margin-right: 60px;
-}
-.back button{
-    background: linear-gradient(135deg,#e3dbf6,#a99bf9);
-    border: none;
-    margin: auto;
-    padding: 10px 0;
-    border-radius: 20px;
-    width: 60%;
-}
-.links{
-    margin: auto;
-}
-.links img{
-    width: 25px;
-    height: 25px;
-    border-radius: 50%;
-    box-shadow: 0 2px 15px #a99bf9;
-    padding: 10px;
-} */
-/* .container:hover .cards{
-    transform: rotateY(180deg);
-}  */
